[package]
name = "components"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.dev]
opt-level = 3

[dependencies]
generic-array = "0.14.4"
typenum = "1.12.0"
nb = "0.1.2"
libm = "0.2.1"

[dependencies.heapless]
version = "0.6"
features = ["serde"]

[dependencies.spin]
version = "0.7.0"
default-features = false

[dependencies.uom]
version = "0.30.0"
default-features = false
features = ["f32", "autoconvert", "si", "use_serde"]

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]
optional = true

[dev-dependencies]
approx = "0.3.2"
proptest = "0.10.1"
proptest-derive = "0.2.0"
utils = { path = "./utils" }

[features]
log_test = ["serde"]
