[package]
name = "components"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"
resolver = "2"

[profile.dev]
opt-level = 3

[dependencies]
nb = "0.1.2"
typenum = "1.13.0"
micromath = "1.1.1"

[dependencies.heapless]
git = "https://github.com/japaric/heapless"
rev = "b15163b2347ac7d3a2c929b88778e62f5639a548"
features = ["serde"]

[dependencies.spin]
version = "0.7.0"
default-features = false

[dependencies.uom]
version = "0.30.0"
default-features = false
features = ["f32", "autoconvert", "si", "use_serde"]

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dev-dependencies]
approx = "0.3.2"
proptest = "0.10.1"
proptest-derive = "0.2.0"
utils = { path = "./utils" }
serde_json = "1"

[features]
