[package]
name = "mousecore2"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

