[package]
name = "mousecore2"
version = "0.1.0"
edition = "2021"
rust-version = "1.58.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
micromath = "2.0.0"
typed-builder = "0.9.1"
typenum = "1.15.0"

[dependencies.serde]
version = "1.0.136"
default-features = false
features = ["derive"]

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

[dependencies.uom]
version = "0.32.0"
default-features = false
features = ["f32", "autoconvert", "si", "use_serde"]

[dependencies.num-traits]
version = "0.2.14"
default-features = false

[dev-dependencies]
approx = "0.3.2"
proptest = "1.0.0"
proptest-derive = "0.3.0"
mousesim2 = { path = "../mousesim2" }
