[package]
name = "utils"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components = { path = "../" }
nb = "0.1.2"
typenum = "1.12.0"
generic-array = "0.14.4"
serde_json = "1"

[dependencies.serde]
version = "1"
optional = true

[dependencies.spin]
version = "0.7.0"
default-features = false

[dependencies.uom]
version = "0.30.0"
default-features = false
features = ["f32", "autoconvert", "si"]
