[package]
name = "utils"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
components = { path = "../" }
nb = "0.1.2"
serde = { version = "1", features = ["derive"] }

[dependencies.uom]
version = "0.30.0"
default-features = false
features = ["f32", "autoconvert", "si"]
