[package]
name = "utils2"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mousecore2 = { path = "../" }
micromath = "2.0.0"
typed-builder = "0.9.1"

[dependencies.uom]
version = "0.32.0"
default-features = false
features = ["f32", "autoconvert", "si"]
