[package]
name = "mousecore"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"

[dependencies]
nb = "0.1.2"
typenum = "1.13.0"
micromath = "1.1.1"

[dependencies.heapless]
version = "0.7.10"
features = ["serde"]

[dependencies.spin]
version = "0.7.0"
default-features = false

[dependencies.uom]
version = "0.32.0"
default-features = false
features = ["f32", "autoconvert", "si", "use_serde"]

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.serde]
version = "1"
default-features = false
features = ["derive"]

[dev-dependencies]
approx = "0.3.2"
proptest = "1.0.0"
proptest-derive = "0.3.0"
utils = { path = "./utils", features = ["std"] }
serde_json = "1"

[features]
