[package]
name = "mousesim"
version = "0.1.0"
authors = ["Kazuya Iimuro <ikazuya0201@gmail.com>"]
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nb = "0.1.2"
micromath = "1.1.1"

[dependencies.mousecore]
path = "../mousecore"

[dependencies.uom]
version = "0.32.0"
default-features = false
features = ["f32", "autoconvert", "si"]
